src/css/main.css
/* ... */
.popup a:last-of-type {
	margin-bottom: 0;
}

#panel-settlement .pact,
#panel-settlement .alliance,
#panel-settlement .war,
#panel-settlement .ceasefire {
	display: none;
}

/* Modal Window */

.modal {
	width: 500px;
	margin-left: auto;
	margin-right: auto;
	z-index: 99999;
	position: absolute;
	color: #666;
	display: none;
	-moz-box-shadow: 0 0 5px #000;
	-webkit-box-shadow: 0 0px 5px #000;
	box-shadow: 0 0 5px #000;
}

.modal .header {
	background-color: #694224;
	background-image: -webkit-gradient(linear, left top, left bottom, from(#9b6b46), to(#694224));
	background-image: -webkit-linear-gradient(top, #9b6b46, #694224);
	background-image: -moz-linear-gradient(top, #9b6b46, #694224);
	background-image: linear-gradient(to bottom, #9b6b46, #694224);
	color: #fff;
	font-size: 18px;
	padding: 4px 10px;
	text-align: left;
	text-transform: uppercase;
}

.modal .content {
	background-color: #fff;
	border-bottom: 1px solid #bfbfbf;
	min-height: 50px;
	padding: 20px;
	text-align: left;
}

.modal .footer {
	background-color: #efefef;
	padding: 10px;
}

.modal-overlay {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	display: none;
	z-index: 99998;
	background-position: 0 0;
	background-repeat: repeat;
	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGNiOAMAANUAz5n+TlUAAAAASUVORK5CYII=);
}

